RESOLVED FIXED43558
[v8] Web Inspector: inspected page crashes when there is a cyclic reference in Object prototype
https://bugs.webkit.org/show_bug.cgi?id=43558
Summary [v8] Web Inspector: inspected page crashes when there is a cyclic reference i...
Yury Semikhatsky
Reported 2010-08-05 06:28:12 PDT
[v8] Web Inspector: inspected page crashes when there is a cyclic reference in Object prototype
Attachments
Patch (4.43 KB, patch)
2010-08-05 07:26 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2010-08-05 07:26:13 PDT
Yury Semikhatsky
Comment 2 2010-08-05 07:33:01 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/inspector/debugger-cyclic-ref-expected.txt A LayoutTests/inspector/debugger-cyclic-ref.html M WebCore/ChangeLog M WebCore/bindings/v8/ScriptValue.cpp Committed r64747
Note You need to log in before you can comment on or make changes to this bug.