2010-08-05  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: inspected page crashes when there is a cyclic reference in Object prototype
        https://bugs.webkit.org/show_bug.cgi?id=43558

        Test: inspector/debugger-cyclic-ref.html

        * bindings/v8/ScriptValue.cpp:
        (WebCore::v8ToInspectorValue):

2010-08-05  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: inspected page crashes when there is a cyclic reference in Object prototype
        https://bugs.webkit.org/show_bug.cgi?id=43558

        * inspector/debugger-cyclic-ref-expected.txt: Added.
        * inspector/debugger-cyclic-ref.html: Added.


Canonical link: https://commits.webkit.org/55565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64747 268f45cc-cd09-0410-ab3c-d52691b4dbfc