WebCore/bindings/v8/ScriptValue.cpp
@@ -104,6 +104,9 @@ static PassRefPtr<InspectorValue> v8ToInspectorValue(v8::Handle<v8::Value> value
         uint32_t length = propertyNames->Length();
         for (uint32_t i = 0; i < length; i++) {
             v8::Local<v8::Value> name = propertyNames->Get(v8::Int32::New(i));
+            // FIXME(yurys): v8::Object should support GetOwnPropertyNames
+            if (!object->HasRealNamedProperty(v8::Handle<v8::String>::Cast(name)))
+                continue;
             RefPtr<InspectorValue> propertyValue = v8ToInspectorValue(object->Get(name));
             if (!propertyValue) {
                 ASSERT_NOT_REACHED();
